# 2025-final-individual-timka-123

solution/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
solution/ads_platform/: manage.py
solution/ads_platform/ads/: api.py  models.py  schemas.py
solution/ads_platform/ads/migrations/: 0001_initial.py  0002_adclick_price_adimpression.py
solution/ads_platform/ads_platform/: api.py  asgi.py  middlewares.py  settings.py  urls.py  wsgi.py
solution/ads_platform/advertisers/: api.py  models.py  schemas.py  tests.py
solution/ads_platform/advertisers/migrations/: 0001_initial.py  0002_advertiserfile.py  0003_alter_advertiserfile_file.py
solution/ads_platform/campaigns/: api.py  models.py  schemas.py  tests.py
solution/ads_platform/campaigns/migrations/: 0001_initial.py  0002_alter_campaign_target_age_from_and_more.py  0003_campaign_clicked_count_campaign_impressions_count.py  0004_target_remove_campaign_target_age_from_and_more.py  0005_rename_target_campaign_targeting.py  0007_remove_campaign_decline_reason_and_more.py  (+4 more)
solution/ads_platform/clients/: admin.py  api.py  models.py  schemas.py  tests.py
solution/ads_platform/config/: apps.py  models.py
solution/ads_platform/internal/: api.py  schemas.py
solution/ads_platform/mlscores/: api.py  apps.py  models.py  schemas.py  tests.py
solution/ads_platform/stats/: api.py  schemas.py
solution/ads_platform/utils/: __init__.py  yagpt.py
solution/grafana-storage/: grafana.db
solution/tester/: __main__.py
solution/tester/data/: advertiser.json  campaigns.json  clients.json  mls.json
(+4 files in other folders)
